openshift-image-registry/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.4.57
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-infra-brazilsouth3-pfrpx
    targetRef:
      kind: Pod
      name: image-registry-655c865b7f-lfwxx
      namespace: openshift-image-registry
      resourceVersion: "467286828"
      uid: 0eeb91b8-8223-4570-95d0-1a5ff19d0761
    zone: brazilsouth-3
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-04T21:48:48Z"
    generateName: image-registry-
    generation: 81
    labels:
      docker-registry: default
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: image-registry
    name: image-registry-9cm7x
    namespace: openshift-image-registry
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: image-registry
      uid: 6b79e7f5-0dcb-49a8-81d9-6aa01ffea880
    resourceVersion: "467286832"
    uid: f37702c6-0d41-4b89-b4d6-4907d861b9b8
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.130.0.54
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-master-1
    targetRef:
      kind: Pod
      name: cluster-image-registry-operator-56df9997c7-t5jkd
      namespace: openshift-image-registry
      resourceVersion: "369060940"
      uid: 75c6ea1f-6ccc-4511-9db9-22707a0afeff
    zone: brazilsouth-2
  kind: EndpointSlice
  metadata:
    annotations:
      endpoints.kubernetes.io/last-change-trigger-time: "2024-06-02T21:42:00Z"
    creationTimestamp: "2023-05-04T21:36:18Z"
    generateName: image-registry-operator-
    generation: 12
    labels:
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: image-registry-operator
      name: image-registry-operator
      service.kubernetes.io/headless: ""
    name: image-registry-operator-zhbpq
    namespace: openshift-image-registry
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: image-registry-operator
      uid: f5cd968b-a0dd-45d2-8434-982ba4b124b2
    resourceVersion: "369060942"
    uid: 1f0ebcbf-cfe8-4dcf-88a5-662eb7bc6aae
  ports:
  - name: ""
    port: 60000
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
