openshift-image-registry/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      imageregistry.operator.openshift.io/checksum: sha256:1c19715a76014ae1d56140d6390a08f14f453c1a59dc36c15718f40c638ef63d
      service.alpha.openshift.io/serving-cert-secret-name: image-registry-tls
      service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
      service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
    creationTimestamp: "2023-05-04T21:48:48Z"
    labels:
      docker-registry: default
    name: image-registry
    namespace: openshift-image-registry
    resourceVersion: "20032"
    uid: 6b79e7f5-0dcb-49a8-81d9-6aa01ffea880
  spec:
    clusterIP: 172.30.161.6
    clusterIPs:
    - 172.30.161.6
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 5000-tcp
      port: 5000
      protocol: TCP
      targetPort: 5000
    selector:
      docker-registry: default
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      include.release.openshift.io/ibm-cloud-managed: "true"
      include.release.openshift.io/self-managed-high-availability: "true"
      include.release.openshift.io/single-node-developer: "true"
      service.alpha.openshift.io/serving-cert-secret-name: image-registry-operator-tls
      service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
      service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1683236429
    creationTimestamp: "2023-05-04T21:36:18Z"
    labels:
      name: image-registry-operator
    name: image-registry-operator
    namespace: openshift-image-registry
    ownerReferences:
    - apiVersion: config.openshift.io/v1
      kind: ClusterVersion
      name: version
      uid: 5d92b52f-9fff-4a6e-b815-398b934115ad
    resourceVersion: "6467"
    uid: f5cd968b-a0dd-45d2-8434-982ba4b124b2
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 60000
      protocol: TCP
      targetPort: 60000
    selector:
      name: cluster-image-registry-operator
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
